# Resonance_Geometry

./: .gitignore  .gitnore  .pre-commit-config.yaml  A_Geometric_Theory_of_AI_Hallucination.md  BUILD.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  CREATE_PR_INSTRUCTIONS.md  For_Sage.md  Makefile  PAPER_INTEGRATION_SUMMARY.md  PR_CHECKLIST_COMMENT.md  PR_DESCRIPTION.md  PR_PLAN.md  PR_SUMMARY_SESSION_011CUWtfEK1atiYdPZXEGALp.md  Quick_Start.md  README.md  README.md.backup  RFO_SIMULATION_RESULTS.md  RG_PROMPT.md  Supplementary_Methods.md  TASKS.md  VALIDATION_SUMMARY.md  WORKFLOW_UPDATE_SUMMARY.md  build.sh  gp-demo.yml  open_prs.sh  poison_generator.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements.txt  rg_detector.py  setup.py  spin_foam_mc_optimized.py
Phase_4_Falsification/: README.md  analysis_template.md  branch_A_coherent_synthesis.md  branch_A_paraphrase.md  branch_B_falsifier_anti_synthesis.md  branch_B_paraphrase.md  branch_C_near_miss.md  deployment_protocol.md  expected_signatures.md
analysis/: RFO_DISS_SUMMARY.md  label_modes.py
config/: topo_test.yaml
configs/: equilibrium_sweep.yaml
controllers/: demo_raic.py
docs/: EPistemic_Status.md  ETHOS.md  Epistemic_Status_Box.md  NAVIGATION.md  README.md  README_bundle.md  ROADMAP.md  Resonance Geometry: Analytical, Simulation, and Documentation Integration  ScalingPaper  TEAM_TASKS.md  app.js  index.html  predictions.md  style.css  whitepaper  whitepaper.tex
experiments/: README.md  adversarial_forcing.py  constraint_dashboard.py  curvature_barriers.py  (+14 more)
(+429 files in other folders)
