[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resonance-geometry"
version = "0.0.0"
requires-python = ">=3.11"
description = "Resonance Geometry demos, docs, and analysis"
readme = "README.md"

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
  \.git
 |\.venv
 |build
 |dist
 |_site
 |docs/data
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true
ignore = [
  "E501",
]
select = [
  "E", "F", "W",
  "I",
  "UP",
  "B",
  "C90"
]
exclude = [
  "docs/data",
  "docs/assets/vendor",
  "results",
  "checkpoints",
]

[tool.ruff.lint.isort]
known-first-party = ["experiments", "tools", "src", "scripts"]
combine-as-imports = true
force-single-line = false
